# advent-of-code-2020

./: .rustfmt.toml  Cargo.toml  Makefile  README.md
docs/: index.html  search-index.js  settings.html  source-files.js
docs/aoc2020_rust/: all.html  fn.main.html  index.html
docs/day01/: all.html  fn.main.html  index.html
docs/day02/: all.html  fn.main.html  fn.verified_by_occurrs_policy.html  fn.verified_by_posmatch_policy.html  index.html  sidebar-items.js  struct.OccurrsPolicy.html  struct.PosMatchPolicy.html  trait.PolicyVerifier.html
docs/day03/: all.html  enum.Space.html  fn.main.html  fn.parse_input.html  index.html  sidebar-items.js  struct.Map.html  struct.Slope.html  type.Matrix.html
docs/day04/: all.html  enum.HeightUnit.html  fn.is_valid_char.html  fn.kv_parser.html  fn.kvlist_parser.html  fn.main.html  fn.parse_input.html  index.html  sidebar-items.js  struct.HAIR_COLORS.html  struct.Height.html  struct.MUST_FIELDS.html  struct.Passport.html
docs/day05/: all.html  fn.main.html  fn.parse_input.html  index.html  sidebar-items.js  struct.BoardingPass.html
docs/day06/: all.html  fn.count_sum.html  fn.inter_func.html  fn.main.html  fn.parse_input.html  index.html  sidebar-items.js
docs/day09/: all.html  fn.find_encryption_weakness.html  fn.find_invalid.html  fn.main.html  fn.parse_input.html  fn.sum_min_max.html  index.html  sidebar-items.js
docs/day10/: all.html  fn.build_sorted.html  fn.count_differences.html  fn.count_viable_routes.html  fn.main.html  fn.parse_input.html  index.html  sidebar-items.js
docs/day11/: all.html  constant.DIRS.html  (+10 more)
(+98 files in other folders)
