[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Lanqing Huang <lqhuang@outlook.com>"]
edition = "2018"
# publish = ["tuna"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
nom = "6"
lazy_static = "1.4.0"
